--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body{
   transform: translateY(-50%);
 }
 h1{
+  margin-top: 15%;
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   font-size: 7vw;
@@ -43,6 +44,32 @@ h1{
   text-fill-color: rgba(167, 146, 129, 0.721);
   color: rgba(167, 146, 129, 0.721);
 }
+h2{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 1.5vw;
+  line-height: 1;
+  color: #ffeba7;
+  text-align: center;
+  -webkit-text-stroke: 2px #ffeba7;
+  text-stroke: 2px #ffeba7;
+  -webkit-text-fill-color: rgba(167, 146, 129, 0.721);
+  text-fill-color: rgba(167, 146, 129, 0.721);
+  color: rgba(167, 146, 129, 0.721);
+}
+button {
+  background-color: rgba(0, 0, 0, 0.333);
+  border: .5px solid rgb(20, 143, 220);
+  border-radius: 10px;
+  color: #fff;
+  padding: 8px;
+  margin-top: 13%;
+  box-shadow: 0 0 30px 0 rgb(20, 193, 220),
+              0 0 30px 0 rgb(20, 127, 220),
+              0 0 10px 0 rgb(20, 153, 220) inset;
+              
+}
+
 .section-center img{
   border-radius: 50%;
   margin-top: 15cm;
