--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@
   background-size: 4%;
   height: 100vh;
   width: 100%;
+  min-width: 400px;;
+  min-height: 500px;
 }
 .bodyMyWork{
 	font-family: 'Montserrat', sans-serif;
