--- a/Pages/style.css
+++ b/Pages/style.css
@@ -174,7 +174,7 @@ button {
   z-index: 9;
   overflow: hidden;
   box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
-  background-color: #7aaedc;
+  background-color: rgb(250, 8, 8);
   animation: border-transform 7s linear infinite;
   transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),  
               right 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
