--- a/css/style.css
+++ b/css/style.css
@@ -100,11 +100,11 @@ h3{
 .menu-icon:checked + label,
 .menu-icon:not(:checked) + label{
   position: fixed;
-  top: 63px;
-  right: 75px;
+  top: 10vh;
+  right: 12vh;
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 4vh;
+  height: 4vh;
   padding: 0;
   margin: 0;
   cursor: pointer;
@@ -115,8 +115,8 @@ h3{
   position: absolute;
   content: '';
   display: block;
-  width: 30px;
-  height: 20px;
+  width: 4vh;
+  height: 2.8vh;
   z-index: 20;
   top: 0;
   left: 0;
@@ -133,8 +133,8 @@ h3{
   position: absolute;
   content: '';
   display: block;
-  width: 22px;
-  height: 2px;
+  width: 4vh;
+  height: 0.4vh;
   z-index: 20;
   top: 10px;
   right: 4px;
@@ -158,7 +158,7 @@ h3{
               transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 .menu-icon:checked + label:after{
-  width: 30px;
+  width: 4vh;
   margin-top: 0;
   right: 0;
   transform: rotate(-45deg);
@@ -170,13 +170,13 @@ h3{
 
 .nav{
   position: fixed;
-  top: 33px;
-  right: 50px;
+  top: 5vh;
+  right: 6vh;
   display: block;
-  width: 80px;
-  height: 80px;
-  padding: 0;
-  margin: 0;
+  width: 9vh;
+  height: 9vh;
+  padding: 2vh;
+  margin: 1vh;
   z-index: 9;
   overflow: hidden;
   box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
