--- a/css/style.css
+++ b/css/style.css
@@ -100,11 +100,11 @@ h3{
 .menu-icon:checked + label,
 .menu-icon:not(:checked) + label{
   position: fixed;
-  top: 10vh;
-  right: 12vh;
+  top: 63px;
+  right: 10vh;
   display: block;
-  width: 4vh;
-  height: 4vh;
+  width: 3.4vh;
+  height: 30px;
   padding: 0;
   margin: 0;
   cursor: pointer;
@@ -115,14 +115,14 @@ h3{
   position: absolute;
   content: '';
   display: block;
-  width: 4vh;
-  height: 3.5vh;
+  width: 3.5vh;
+  height: 20px;
   z-index: 20;
   top: 0;
   left: 0;
   border-top: 2px solid #ececee;
   border-bottom: 2px solid #ececee;
-  transition: border-width 100ms 1500ms ease, 
+  transition: border-width 100ms 150 0ms ease, 
               top 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
               height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1), 
               background-color 200ms ease,
@@ -134,12 +134,11 @@ h3{
   content: '';
   display: block;
   width: 3vh;
-  height: 0.4vh;
+  height: 2px;
   z-index: 20;
   top: 10px;
-  right: 4px;
   background-color: #ececee;
-  margin-top: -1px;
+  margin-top: 1px;
   transition: width 100ms 1750ms ease, 
               right 100ms 1750ms ease,
               margin-top 100ms ease, 
@@ -158,7 +157,7 @@ h3{
               transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 .menu-icon:checked + label:after{
-  width: 4vh;
+  width: 3.5vh;
   margin-top: 0;
   right: 0;
   transform: rotate(-45deg);
@@ -170,13 +169,14 @@ h3{
 
 .nav{
   position: fixed;
-  top: 5vh;
-  right: 6vh;
+  top: 33px;
+  right: 5vh;
   display: block;
-  width: 9vh;
-  height: 9vh;
-  padding: 2vh;
-  margin: 1vh;
+  width: 4.7%;
+  height: 80px;
+  padding: 0;
+  padding-right:2.9em;
+  margin: 0;
   z-index: 9;
   overflow: hidden;
   box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
@@ -315,7 +315,7 @@ h3{
 	transition: all 250ms linear;
 }
 .logo img {
-	height: 26px;
+	height: 5vh;
 	width: auto;
 	display: block;
   position:fixed;
