--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@
   background-position: center;
   background-repeat: repeat;
   background-size: 4%;
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  min-width: 400px;;
+  width: auto;
+  min-width: 400px;
   min-height: 500px;
 }
 .bodyMyWork{
@@ -34,7 +35,7 @@
   width: 100%;
 }
 .section-center{
-  position: absolute;
+  position:absolute;
   top: 50%;
   left: 0;
   display: block;
@@ -43,15 +44,20 @@
   margin: 0;
   z-index: 6;
   text-align: center;
-  transform: translateY(-50%);
+  /*transform: translateY(-50%);*/
 }
 .section-center img{
   position: relatve;
   display: inline-block;
     border-radius: 50%;
-  margin-top: 15cm;
   max-width: 100%;
   width: 30%;
+  margin: 4vh;
+}
+.section-center h3{
+  margin: 5vh;
+  padding: 3vh;
+font-size: 5vh;
 }
 h1{
   font-family: 'Montserrat', sans-serif;
@@ -65,6 +71,7 @@ h1{
   -webkit-text-fill-color: rgba(167, 146, 129, 0.721);
   text-fill-color: rgba(167, 146, 129, 0.721);
   color: rgba(167, 146, 129, 0.721);
+ 
 
 
   
@@ -77,10 +84,10 @@ font-size: 4vh;
 button {
   background-color: rgba(0, 0, 0, 0.333);
   border: .5px solid rgb(20, 143, 220);
-  border-radius: 10px;
+  border-radius: 1vh;
   color: #fff;
   padding: 8px;
-  margin-top: 13%;
+  margin-top: 8vh;
   box-shadow: 0 0 30px 0 rgb(20, 193, 220),
               0 0 30px 0 rgb(20, 127, 220),
               0 0 10px 0 rgb(20, 153, 220) inset;
@@ -172,7 +179,7 @@ h3{
 .nav{
   position: fixed;
   top: 33px;
-  right: 6vh;
+  right: 7vh;
   display: block;
   width: 4vh;
   height: 80px;
@@ -322,9 +329,8 @@ h3{
 	width: auto;
 	display: block;
   position:fixed;
-  background-color: #170303;
-  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
 }
+
 
 
 @media screen and (max-width: 1200px) {
@@ -339,7 +345,7 @@ h3{
     right: 30px;
   }
   h1{
-    font-size: 9vh;
+    font-size: 20vh;
     -webkit-text-stroke: 2px transparent;
     text-stroke: 2px transparent;
     -webkit-text-fill-color: #ffeba7;
@@ -362,7 +368,7 @@ h3{
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  font-size: 30px;
+  font-size: 5vh;
 }
   .social {
     padding-left: 0px;
@@ -371,19 +377,19 @@ h3{
     color: rgba(167, 146, 129, 0.768);
     list-style-type: none;
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    padding: 1%;
-    border: 1px solid rgba(167, 146, 129, 0.721);
+    width: 9vh;
+    height: 10vh;
+    line-height: 0;
+    padding: 2vh;
+    border: 0.5vh solid rgba(167, 146, 129, 0.721);
     cursor: pointer;
-    margin-left: 10px;
-    margin-bottom: 20px;
+    margin-left: 1vh;
+    margin-bottom: 2vh;
     transition: ease .3s;
   }
     .hover {
       color: rgb(201, 145, 99);
-      border: 1px solid rgba(167, 146, 129, 1);
+      border: 1vh solid rgba(167, 146, 129, 1);
     
   }
 
@@ -397,6 +403,10 @@ h3{
   opacity: 1;
 }
 
+.dropdown{
+  padding: 1px;
+  margin: 1xp;
+}
 /*My work*/
 .htmlMyWork {
   box-sizing: border-box;
