--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,22 @@
   min-width: 400px;
   min-height: 500px;
 }
+.Header{
+  width: 100%;
+  height: 25vh;
+  background-color: #170303;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 4%;
+  position: fixed;
+}
+.header-my-work{
+  width: 100%;
+  height: 15vh;
+  background-color: #18222d;
+  position: static;
+}
 .bodyMyWork{
 	font-family: 'Montserrat', sans-serif;
     overflow: scroll;
@@ -79,7 +95,8 @@ h1{
 h2{
   font-family: 'Montserrat', sans-serif;
   color: #ffeba7;
-font-size: 4vh;
+ font-size: 5vh;
+ padding: 2.5vh;
 }
 button {
   background-color: rgba(0, 0, 0, 0.333);
@@ -184,7 +201,7 @@ h3{
   width: 4vh;
   height: 80px;
   padding: 0;
-  padding-right:3.5em;
+  padding-right:4em;
   margin: 0;
   z-index: 9;
   overflow: hidden;
@@ -378,7 +395,7 @@ h3{
     list-style-type: none;
     display: inline-block;
     width: 9vh;
-    height: 10vh;
+    height: 9vh;
     line-height: 0;
     padding: 2vh;
     border: 0.5vh solid rgba(167, 146, 129, 0.721);
@@ -386,6 +403,7 @@ h3{
     margin-left: 1vh;
     margin-bottom: 2vh;
     transition: ease .3s;
+    font-size: 4vh;
   }
     .hover {
       color: rgb(201, 145, 99);
@@ -427,11 +445,10 @@ h3{
 }
 
 .grid {
-  width: 100vh;
+  width: 100%;
   max-width: 60rem;
   margin-left: auto;
   margin-right: auto;
-
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
