--- a/css/style.css
+++ b/css/style.css
@@ -492,8 +492,8 @@ button {
 .grid {
   width: 100%;
   max-width: 60rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 19rem;
+  margin-right: 19rem;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -546,7 +546,7 @@ button {
 .tile-img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 37vh;
   opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
