--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
   background-repeat: repeat;
   background-size: 4%;
   position: fixed;
-  z-index: 10;
+  z-index: 5;
 }
 .header-my-work{
   width: 100%;
@@ -52,6 +52,9 @@
   margin: 1vh auto;
   display: block;
   
+}
+.dropdown{
+  z-index: 11;
 }
 
 .button a{
