--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 .grid-container {
     padding-top: 2vh;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 45% 55%;
   background-color:transparent;
 }
 .grid-item0 {
@@ -69,7 +69,7 @@
 .grid-item1 {
   background-color: #af5032;
   border: 0.3rem solid green;
-  padding: 6vh;
+  padding: 7%;
   font-family: 'Montserrat', sans-serif;
   color: #ffeba7;
   font-size: 1.5rem;
@@ -77,7 +77,7 @@
 .grid-item2 {
   background-color: #52393f;
   border: 0.3rem solid rgb(143, 197, 55);
-  padding: 6vh;
+  padding: 7%;
   font-family: 'Montserrat', sans-serif;
   color: #ffeba7;
   font-size: 1.5rem;
